# analise

./: chats.py  grafico.py  grafico_vendedor.py  graficos.py  home3.py  pyproject.toml  requirements.txt  upload.py
.devcontainer/: devcontainer.json
pages/: vendedor.py
